<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/Warning"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/hrImage"
                android:layout_width="125dp"
                android:layout_height="105dp"
                android:foreground="@drawable/heartratebad" />

            <TextView
                android:id="@+id/subTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/hrBodyText"
                android:textSize="18sp" />


            <Button
                android:id="@+id/messageButton"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:gravity="center"
                android:text="@string/textButton" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>