<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fallTitle"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:padding="10dp"
            android:paddingTop="500dp"
            android:text="@string/fallBodyText"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/countdownTimer"
            android:layout_width="269dp"
            android:layout_height="242dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:textColor="@color/white"
            android:background="@drawable/redcircle"
            android:fadingEdgeLength="5dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="70sp" />

        <Button
            android:id="@+id/messageButton"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/textButtonFall"
            android:textSize="30sp" />


    </LinearLayout>



</LinearLayout>